--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,20 +3,21 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "A website for testing",
-    "doc1": "Latin-ish",
-    "Example Page": "Example Page",
-    "doc2": "document number 2",
-    "doc3": "This is document number 3",
-    "doc4": "Other Document",
-    "doc5": "Fifth Document",
-    "Docs": "Docs",
-    "API": "API",
+    "tagline": "Homa automation for everyboy",
+    "doc1": "Installation",
+    "Installation": "Installation",
+    "doc2": "How to set-up a sensor",
+    "doc3": "Server requests",
+    "doc4": "Bed",
+    "doc5": "Lamp",
+    "Documentation": "Documentation",
+    "Devices": "Devices",
     "Help": "Help",
     "Blog": "Blog",
-    "Docusaurus": "Docusaurus",
-    "First Category": "First Category",
-    "Second Category": "Second Category"
+    "Getting Started": "Getting Started",
+    "Guides": "Guides",
+    "API": "API",
+    "Compatible devices": "Compatible devices"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
